# doccrawl

./: .gitignore  README.md  debug_strategy.py  env.example  hello_world.py  llm_analysis.md  project_docs.py  pyproject.toml
config/: crawler_config.example.yaml  crawler_config.yaml
docker/: Dockerfile  docker-compose.yml
src/: main.py
src/core/: crawler.py
src/core/strategies/: type_0.py  type_4.py
src/crud/: base_crud.py
src/db/: connection.py
src/doccrawl/: __init__.py  __main__.py  main.py
src/doccrawl/config/: settings.py
src/doccrawl/core/: crawler.py
src/doccrawl/core/strategies/: base_strategy.py  type_0.py  type_1.py  type_2.py  type_3.py  type_4.py
src/doccrawl/crud/: base_crud.py  config_url_log_crud.py  frontier_crud.py
src/doccrawl/db/: cleanup_db.py  connection.py  migrations.py
src/doccrawl/models/: config_url_log_model.py  frontier_model.py
src/doccrawl/utils/: crawler_utils.py  logging.py
src/utils/: crawler_utils.py
